--- a/package.json
+++ b/package.json
@@ -43,9 +43,16 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "prettier": "^1.14.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
-  }
+  },
+  "prettier": {
+    "traillingComma": "es5",
+    "printWidth": 120,
+    "singleQuote": true,
+    "tabWidth": 4
+   }
 }
